<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ca.thanasi.unitconverter.MainActivity">

    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_blue"
        android:elevation="4dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/amount_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:hint="@string/convert_from"
            android:inputType="numberDecimal"
            android:textColor="@color/white" />

        <Spinner
            android:id="@+id/unit_type_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_spinner_bg"
            android:drawSelectorOnTop="true"
            android:paddingLeft="10dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_tb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/terabyteTitle_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_terabyte"
                        android:paddingBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/terabyte_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="5dp"
                        android:textSize="19sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_tbit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/terabitTitle_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_terabit"
                        android:paddingBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/terabit_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="5dp"
                        android:textSize="19sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_gb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/gigabyteTitle_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_gigabyte"
                        android:paddingBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/gigabyte_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="5dp"
                        android:textSize="19sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_gbit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/gigabitTitle_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_gigabit"
                        android:paddingBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/gigabit_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="5dp"
                        android:textSize="19sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_mb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/megabyteTitle_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_megabyte"
                        android:paddingBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/megabyte_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="5dp"
                        android:textSize="19sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_mbit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/megabitTitle_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_megabit"
                        android:paddingBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/megabit_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="5dp"
                        android:textSize="19sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_kb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/kilobyteTitle_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_kilobyte"
                        android:paddingBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/kilobyte_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="5dp"
                        android:textSize="19sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_kbit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/kilobitTitle_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_kilobit"
                        android:paddingBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/kilobit_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="5dp"
                        android:textSize="19sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/byteVarTitle_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_byte"
                        android:paddingBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/byteVar_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="5dp"
                        android:textSize="19sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_bit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/bitTitle_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_bit"
                        android:paddingBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/bit_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="5dp"
                        android:textSize="19sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>